--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="subtitle">Mehrere Tag-Properties · Farbige, ausblendbare Tags</div>
   </div>
   <div class="header-right">
-    <div class="subtitle">HTML · CSS · JS</div>
+    <div class="subtitle">Dunkel/HellModus</div>
     <button class="btn-outline" id="theme-toggle-btn" title="Erscheinungsbild wechseln">☀️</button>
   </div>
 </header>
