Update subtitle for theme toggle section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="subtitle">Mehrere Tag-Properties · Farbige, ausblendbare Tags</div>
   </div>
   <div class="header-right">
-    <div class="subtitle">Dunkel/HellModus</div>
+    <div class="subtitle">B-v0.1</div>
     <button class="btn-outline" id="theme-toggle-btn" title="Erscheinungsbild wechseln">☀️</button>
   </div>
 </header>
